Fix issues with navigation bar on small screens.

--- a/themes/elmo/css/style.css
+++ b/themes/elmo/css/style.css
@@ -6457,7 +6457,6 @@ template {
 .header {
   margin: 0 auto;
   width: 80%;
-  max-height: 30%;
 }
 
 /* Title */
