--- a/themes/elmo/scss/header.scss
+++ b/themes/elmo/scss/header.scss
@@ -6,7 +6,6 @@
 
 .header {
     @include container-center;
-    max-height: 30%;
 }
 
 /* Title */
